2007-02-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalView.m ([UIxCalView -redirectForUIDsAction]):
	replaced use of [NSString stringByTrimmingWhiteSpaces] with
	[NSString stringByTrimmingSpaces].

	* UI/MailPartViewers/UIxMailPartICalViewer.m: request the key
	"cnWithoutQuotes" instead of "cnForDisplay", which no longer
	exists.

	* UI/Scheduler/UIxCalDayOverview.m,
	UI/Scheduler/UIxCalDayChartview.m,
	UI/Scheduler/UIxCalDayListview.m,
	UI/Scheduler/UIxCalWeekOverview.m,
	UI/Scheduler/UIxCalWeekChartview.m,
	UI/Scheduler/UIxCalWeekListview.m,
	UI/Scheduler/UIxCalInlineMonthOverview.m,
	UI/Scheduler/UIxCalYearOverview.m: removed unused modules.

2007-02-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendPersonalSourcesInContext:context]): release connectoin
	channel when everything is done.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-newAbAction]): new action method to crate a new contact folder
	from the web UI.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -create]): new method
	that requests the folder manager to create a folder table with the
	specified type at the specified path. The type is taken from [self
	folderType].

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-folderType]): implemented.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -folderType]): implemented.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendPersonalSourcesInContext:context]): we now fetch all
	folders with type "Contact" that belong to the current user.
	([SOGoContactFolders -newFolderWithName:name]): new method to
	create a new contact folder.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -userFolderPath]): treat
	resulting url with [NSString+Utilities hostlessURL] instead of
	using NSURL. This is because the url in question sometimes has a