@@ -25,6 +25,10 @@
       label="Day View";
       onclick = "return onDayOverview();";
       image = "day-view.png"; },
+    { link  = "dayoverview";
+      label="Multicolumn Day View";
+      onclick = "return onMulticolumnDayOverview();";
+      image = "day-view-multicolumn.png"; },
     { link  = "weekoverview";
       label="Week View";
       onclick = "return onWeekOverview();";
